--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,16 @@
     <string name="text_stock">Stock</string>
     <string name="title_add_producto">Añadir Productos</string>
     <string name="button_limpiar">Limpiar</string>
+    <string name="text_nombreProducto">Nombre Producto</string>
+    <string name="text_cantidad">Cantidad</string>
+    <string name="text_precioUnidad">Precio Unidad</string>
+    <string name="text_precioTotal">PrecioTotal</string>
+    <string name="text_seleccionaTodos">Todos</string>
+    <string name="text_Total">Total :</string>
+    <string name="text_Pagar">Pagar</string>
+    <string name="text_precioPrincipal">0.0€</string>
+    <string name="text_carrito">Carrito</string>
+    <string name="text_cero">0</string>
+
 
 </resources>
